--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "express": "^4.18.2",
         "gojs": "^2.3.3",
-        "nodemon": "^2.0.21"
+        "nodemon": "^2.0.21",
+        "socket.io": "^4.6.1"
     }
 }
